Fixed Overflow with Profile Page
Fixed but where as rides increase, it would push the profile page under the navbar.

--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -6,16 +6,18 @@
   display: flex;
 }
 
-.container2 {
-    padding-top: 200px;
+.container-2 {
+    padding-top: 0px;
     background-color: white;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
   .flex-container {
-    margin-top: 200px;
+    margin-top: 80px;
   }
   
   h2 {
